samples/_failures_safe/1760886662_f55493_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c09fae90.c: In function ‘main’:
./samples/SAFE/__tmp_c09fae90.c:154:34: error: expected ‘]’ at end of input
  154 |     if (len > 0 && input_text[len
      |                                  ^
      |                                  ]
./samples/SAFE/__tmp_c09fae90.c:154:5: error: expected declaration or statement at end of input
  154 |     if (len > 0 && input_text[len
      |     ^~
